force-app/main/default/objects/Engagement_Summary__c/fields/Completion_Of_CIM__c.field-meta.xml
<CustomField>
    <fullName>Completion_Of_CIM__c</fullName>
    <label>Completion Of CIM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>