force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Cash__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Cash__c</fullName>
    <label>Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>