force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Cash_Percent__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Cash_Percent__c</fullName>
    <formula>BLANKVALUE( Consideration_Cash__c /  Total_Consideration__c, 0)</formula>
    <label>Consideration Cash Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>