force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Earnout_Payments__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Earnout_Payments__c</fullName>
    <label>Earnout Payment (Present Value Basis)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>