force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Earnout_Payments_Note__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Earnout_Payments_Note__c</fullName>
    <label>Consideration Earnout Payments Note</label>
    <type>TextArea</type>
</CustomField>