force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Other_Payments__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Other_Payments__c</fullName>
    <label>Other Contingent Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>