force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Other_Percent__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Other_Percent__c</fullName>
    <formula>BLANKVALUE(Consideration_Other_Payments__c  / Total_Consideration__c, 0)</formula>
    <label>Consideration Other Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>