force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Seller_Notes__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Seller_Notes__c</fullName>
    <label>Seller Notes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>