force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Seller_Notes_Note__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Seller_Notes_Note__c</fullName>
    <label>Consideration Seller Notes Note</label>
    <type>TextArea</type>
</CustomField>