force-app/main/default/objects/Engagement_Summary__c/fields/Consideration_Stock__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Stock__c</fullName>
    <label>Preferred or Common Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>