force-app/main/default/objects/Engagement_Summary__c/fields/Contacted_Financial_Total__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Financial_Total__c</fullName>
    <label>Contacted Financial Total</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>