force-app/main/default/objects/Engagement_Summary__c/fields/Contacted_Strategic_Domestic_Percent__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Strategic_Domestic_Percent__c</fullName>
    <formula>Contacted_Strategic_Domestic__c /  Contacted_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacted Strategic Domestic Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>