force-app/main/default/objects/Engagement_Summary__c/fields/Contacted_Strategic_International__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Strategic_International__c</fullName>
    <label>Contacted Strategic International</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>