force-app/main/default/objects/Engagement_Summary__c/fields/Contacted_Strategic_Total__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Strategic_Total__c</fullName>
    <formula>Contacted_Strategic_Domestic__c + Contacted_Strategic_International__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacted Strategic Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>