force-app/main/default/objects/Engagement_Summary__c/fields/Controlling_Shareholder_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Shareholder_Ownership__c</fullName>
    <label>Controlling Shareholder Ownership</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>