force-app/main/default/objects/Engagement_Summary__c/fields/Did_Committee_Have_Separate_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Did_Committee_Have_Separate_Advisor__c</fullName>
    <label>Did Committee Have Separate Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>