force-app/main/default/objects/Engagement_Summary__c/fields/Does_Earnout_Accelerate__c.field-meta.xml
<CustomField>
    <fullName>Does_Earnout_Accelerate__c</fullName>
    <label>Does Earnout Accelerate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown/Silent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>