force-app/main/default/objects/Engagement_Summary__c/fields/Earnout_Metric__c.field-meta.xml
<CustomField>
    <fullName>Earnout_Metric__c</fullName>
    <label>Earnout Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Gross Profit</fullName>
            </value>
            <value>
                <fullName>Earnings / EBITDA</fullName>
            </value>
            <value>
                <fullName>Combination</fullName>
            </value>
            <value>
                <fullName>Net Income</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>