force-app/main/default/objects/Engagement_Summary__c/fields/Earnout_Period__c.field-meta.xml
<CustomField>
    <fullName>Earnout_Period__c</fullName>
    <label>Earnout Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 12 months</fullName>
            </value>
            <value>
                <fullName>12 to 18 months</fullName>
            </value>
            <value>
                <fullName>18 to 24 Months</fullName>
            </value>
            <value>
                <fullName>24 to 36 Months</fullName>
            </value>
            <value>
                <fullName>36+ Months</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>