force-app/main/default/objects/Engagement_Summary__c/fields/Employees_In_Incentive_Plan__c.field-meta.xml
<CustomField>
    <fullName>Employees_In_Incentive_Plan__c</fullName>
    <label>Employees In Incentive Plan</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>