force-app/main/default/objects/Engagement_Summary__c/fields/Engagement_Letter_Base__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Letter_Base__c</fullName>
    <label>Engagement Letter Base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>