force-app/main/default/objects/Engagement_Summary__c/fields/Engagement_Letter_Base_LTM__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Letter_Base_LTM__c</fullName>
    <formula>Engagement_Letter_Base__c / Pitch_EBITDA_LTM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Letter Base LTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>