force-app/main/default/objects/Engagement_Summary__c/fields/Engagement_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Summary_Report__c</fullName>
    <formula>$Setup.HL_General__c.Cognos_Protocol__c + $Setup.HL_General__c.Cognos_Domain__c + &apos;/ibmcognos/bi/v1/disp?b_action=cognosViewer&amp;run.outputFormat=PDF&amp;run.prompt=false&amp;ui.object=storeID%28%22i5178368D3B6142F6B97C69B1AA95EA5D%22%29&amp;ui.action=run&amp;cv.header=true&amp;cv.toolbar=true&amp;ui_appbar=true&amp;p_p_EngagementId=&apos; + CASESAFEID(Engagement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Summary Report</label>
    <type>Text</type>
</CustomField>