force-app/main/default/objects/Engagement_Summary__c/fields/Fair_Price_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Fair_Price_Provisions__c</fullName>
    <label>Fair Price Provisions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>