force-app/main/default/objects/Engagement_Summary__c/fields/FB_Of_BS_Financial_Percent__c.field-meta.xml
<CustomField>
    <fullName>FB_Of_BS_Financial_Percent__c</fullName>
    <formula>Final_Bids_Total__c /  Books_Sent_Financial_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Of BS Financial Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>