force-app/main/default/objects/Engagement_Summary__c/fields/Fee_Subject_To_Contingent_Fees__c.field-meta.xml
<CustomField>
    <fullName>Fee_Subject_To_Contingent_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fee subject to contingent future payments or negative adjustments from earn-outs, escrow, referral fees or other.</inlineHelpText>
    <label>Fee Subject To Contingent Fees</label>
    <type>Checkbox</type>
</CustomField>