force-app/main/default/objects/Engagement_Summary__c/fields/Fifth_Ratchet_From_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Ratchet_From_Amount__c</fullName>
    <label>Fifth Ratchet From Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>