force-app/main/default/objects/Engagement_Summary__c/fields/Fifth_Ratchet_Percent__c.field-meta.xml
<CustomField>
    <fullName>Fifth_Ratchet_Percent__c</fullName>
    <label>Fifth Ratchet Percent</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>