force-app/main/default/objects/Engagement_Summary__c/fields/Final_Bids_Strategic_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Final_Bids_Strategic_Domestic__c</fullName>
    <label>Final Bids Strategic Domestic</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>