force-app/main/default/objects/Engagement_Summary__c/fields/Final_Bids_Strategic_Domestic_Percent__c.field-meta.xml
<CustomField>
    <fullName>Final_Bids_Strategic_Domestic_Percent__c</fullName>
    <formula>Final_Bids_Strategic_Domestic__c /  Contacted_Strategic_Domestic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Bids Strategic Domestic Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>