force-app/main/default/objects/Engagement_Summary__c/fields/Final_Bids_Total__c.field-meta.xml
<CustomField>
    <fullName>Final_Bids_Total__c</fullName>
    <formula>Final_Bids_Strategic_Domestic__c + Final_Bids_Strategic_International__c + Final_Bids_Financial_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Bids Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>