force-app/main/default/objects/Engagement_Summary__c/fields/Final_Ratchet_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Ratchet_Amount__c</fullName>
    <label>Final Ratchet Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>