force-app/main/default/objects/Engagement_Summary__c/fields/Final_Ratchet_Total__c.field-meta.xml
<CustomField>
    <fullName>Final_Ratchet_Total__c</fullName>
    <formula>IF( Transaction_Value_for_Fee_Calc__c &gt; Final_Ratchet_Amount__c, (Transaction_Value_for_Fee_Calc__c - Final_Ratchet_Amount__c) * Final_Ratchet_Percent__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Ratchet Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>