force-app/main/default/objects/Engagement_Summary__c/fields/Financial_Final_EBITDA_LTM__c.field-meta.xml
<CustomField>
    <fullName>Financial_Final_EBITDA_LTM__c</fullName>
    <formula>Engagement__r.Financial_Final_EBITDA_LTM__c</formula>
    <label>Financial Final EBITDA LTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>