force-app/main/default/objects/Engagement_Summary__c/fields/First_Ratchet_From_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Ratchet_From_Amount__c</fullName>
    <label>First Ratchet From Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>