force-app/main/default/objects/Engagement_Summary__c/fields/First_Ratchet_Total__c.field-meta.xml
<CustomField>
    <fullName>First_Ratchet_Total__c</fullName>
    <formula>IF(Transaction_Value_for_Fee_Calc__c &gt;= First_Ratchet_To_Amount__c, (First_Ratchet_To_Amount__c - First_Ratchet_From_Amount__c) * First_Ratchet_Percent__c, IF((Transaction_Value_for_Fee_Calc__c &gt; First_Ratchet_From_Amount__c) &amp;&amp; (Transaction_Value_for_Fee_Calc__c &lt; First_Ratchet_To_Amount__c), (Transaction_Value_for_Fee_Calc__c -First_Ratchet_From_Amount__c)*First_Ratchet_Percent__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Ratchet Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>