force-app/main/default/objects/Engagement_Summary__c/fields/First_Round_Bid__c.field-meta.xml
<CustomField>
    <fullName>First_Round_Bid__c</fullName>
    <label>First Round Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>