force-app/main/default/objects/Engagement_Summary__c/fields/Fourth_Ratchet_From_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Ratchet_From_Amount__c</fullName>
    <label>Fourth Ratchet From Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>