force-app/main/default/objects/Engagement_Summary__c/fields/Fourth_Ratchet_To_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Ratchet_To_Amount__c</fullName>
    <label>Fourth Ratchet To Amount (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>