force-app/main/default/objects/Engagement_Summary__c/fields/Fourth_Ratchet_Total__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Ratchet_Total__c</fullName>
    <formula>IF(Transaction_Value_for_Fee_Calc__c &gt;= Fourth_Ratchet_To_Amount__c, (Fourth_Ratchet_To_Amount__c - Fourth_Ratchet_From_Amount__c) *  Fourth_Ratchet_Percent__c,  IF((Transaction_Value_for_Fee_Calc__c &gt; Fourth_Ratchet_From_Amount__c) &amp;&amp; (Transaction_Value_for_Fee_Calc__c &lt; Fourth_Ratchet_To_Amount__c), (Transaction_Value_for_Fee_Calc__c -Fourth_Ratchet_From_Amount__c)*Fourth_Ratchet_Percent__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fourth Ratchet Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>