force-app/main/default/objects/Engagement_Summary__c/fields/Go_Shop_Provision_Months__c.field-meta.xml
<CustomField>
    <fullName>Go_Shop_Provision_Months__c</fullName>
    <label>Go Shop Provision Months</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>