force-app/main/default/objects/Engagement_Summary__c/fields/Had_Second_Fairness_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Had_Second_Fairness_Opinion__c</fullName>
    <label>Had Second Fairness Opinion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>