force-app/main/default/objects/Engagement_Summary__c/fields/Had_Separate_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Had_Separate_Escrow__c</fullName>
    <label>Separate Escrow for Post Close Adj</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>