force-app/main/default/objects/Engagement_Summary__c/fields/Has_Public_Debt__c.field-meta.xml
<CustomField>
    <fullName>Has_Public_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Company with Public Debt</label>
    <type>Checkbox</type>
</CustomField>