force-app/main/default/objects/Engagement_Summary__c/fields/Has_Seller_Note_Conversion_Rights__c.field-meta.xml
<CustomField>
    <fullName>Has_Seller_Note_Conversion_Rights__c</fullName>
    <label>Conversion Right</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>