force-app/main/default/objects/Engagement_Summary__c/fields/High_52_Week__c.field-meta.xml
<CustomField>
    <fullName>High_52_Week__c</fullName>
    <label>High 52 Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>