force-app/main/default/objects/Engagement_Summary__c/fields/Implemented_New_Option_Pool_Equity_Plan__c.field-meta.xml
<CustomField>
    <fullName>Implemented_New_Option_Pool_Equity_Plan__c</fullName>
    <label>Implemented New Option Pool Equity Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>