force-app/main/default/objects/Engagement_Summary__c/fields/Incentive_Plan__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Plan__c</fullName>
    <label>If yes, form of Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash - Flat</fullName>
            </value>
            <value>
                <fullName>Cash - Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>