force-app/main/default/objects/Engagement_Summary__c/fields/Indemnity_Basket_Size__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Basket_Size__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>