force-app/main/default/objects/Engagement_Summary__c/fields/Indemnity_Basket_Term__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Basket_Term__c</fullName>
    <label>Indemnity Basket Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unkown/Silent</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>