force-app/main/default/objects/Engagement_Summary__c/fields/Indemnity_Basket_Threshold_Remedy__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Basket_Threshold_Remedy__c</fullName>
    <description>(i.e., indemnity up to a certain amount)</description>
    <inlineHelpText>(i.e., indemnity up to a certain amount)</inlineHelpText>
    <label>Eligible Claim Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown/Silent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>